--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,7 +43,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
-    testImplementation 'junit:junit:4.+'
+    testImplementation 'junit:junit:'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     // Retrofit
@@ -51,16 +51,28 @@ dependencies {
     //GSON
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     // Room
-    def room_version = "2.2.6"
+    def room_version = "2.3.0"
+
     implementation "androidx.room:room-runtime:$room_version"
-    kapt "androidx.room:room-compiler:$room_version"
-    // optional - Kotlin Extensions and Coroutines support for Room
-    implementation "androidx.room:room-ktx:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+
+    // optional - RxJava2 support for Room
+    implementation "androidx.room:room-rxjava2:$room_version"
+
+    // optional - RxJava3 support for Room
+    implementation "androidx.room:room-rxjava3:$room_version"
+
+    // optional - Guava support for Room, including Optional and ListenableFuture
+    implementation "androidx.room:room-guava:$room_version"
+
     // optional - Test helpers
-    //noinspection GradleDependency
     testImplementation "androidx.room:room-testing:$room_version"
+
+    // optional - Paging 3 Integration
+    implementation "androidx.room:room-paging:2.4.0-beta01"
     //viewmodelScope
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0"
     //livedata
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.4.0"
+    implementation"androidx.lifecycle:lifecycle-runtime-ktx:2.2.0"
 }
