aplicación consumo de datos ,
-se utiliza libreria retrofit2
-viewbinding
-levantar servidor de prueba localhost IP http://111.111.0.111:3100,
-instalar ,
-Patron de diseño MVVM
-prueba de Conexión ok :)
-Recycler view ok
-pintando la vista ok
-se cargan los datos de consulta feed
-se puede pasar al otro fragmento al click de la imagen o lemento en vista , sin button
-pasar datos a segundo fragmento ok
-crear metodo viewmodel contacts ok
-consumir /api/contact ok
-armando splash screen de inicio ok
-crear registro de usuario pantalla home en proceso
-corregir conexión con base de datos pendiente

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,4 +81,8 @@ dependencies {
     //Coil dependencies imagenes svg,jpg,full,delay,efectos
     implementation("io.coil-kt:coil:1.2.1")
     implementation("io.coil-kt:coil-svg:1.2.1")
+    //animaciones con loibreria lottie para splash screen
+    implementation 'com.airbnb.android:lottie:4.2.1'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
